fixed spacing in category teasers

--- a/ui.apps/src/main/content/jcr_root/apps/we-retail/components/content/category-teaser/clientlibs/less/category-teaser.less
+++ b/ui.apps/src/main/content/jcr_root/apps/we-retail/components/content/category-teaser/clientlibs/less/category-teaser.less
@@ -2,7 +2,7 @@
 
 .we-CategoryTeaser {
     padding: 0;
-    margin: 10px;
+    //margin: 10px;
 
     background: 50% no-repeat;
     background-size: cover;
